# puch_ai_hackathon

./: README.md  pyproject.toml  requirements.txt
app/: video_rag_pipeline.py
deployment/: mcp_starter.py
